# GitLab-CI

./: .dockerignore  .gitignore  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.gitlab-ci-local  Dockerfile.original  README.md  pyproject.toml  version.env
.gitlab-ci/: defaults.gitlab-ci.yml  helm.gitlab-ci.yml  image.gitlab-ci.yml  release.gitlab-ci.yml  rules.gitlab-ci.yml  sbom.gitlab-ci.yml
data/: bazel-module.template.bazel  helm-repo-dependencies.yaml  project-expectations.yaml
jobs/: .auth.gitlab-ci.yml  .bashunit.gitlab-ci.yml  .defaults.gitlab-ci.yml  .helm.gitlab-ci.yml  .image.gitlab-ci.yml  .pipeline-version.gitlab-ci.yml  .release.gitlab-ci.yml  .stages.gitlab-ci.yml  .utilities.gitlab-ci.yml
lib/: image-settings.gitlab-ci.yml  pipeline-version.gitlab-ci.yml  rules.gitlab-ci.yml  utilities.gitlab-ci.yml
pipelines/: .apply-downstream-project.yaml  .calculate-pipeline-version.yaml  .configure-access.yaml  bazel-module.pipeline.yaml  helm-chart.pipeline.yaml  npm-package.pipeline.yaml  oci-image.pipeline.yaml  php-package.pipeline.yaml  python-package.pipeline.yaml  tarfile-package.pipeline.yaml
src/: gitlab-ci.py  pytest.ini
templates/: ansible-collection.pipeline.yml  ansible-collection.yml  ansible-playbook.pipeline.yml  aws-stop-instances.job.yml  helm-chart.pipeline.yml  helm-pipeline.yml  image-pipeline.yml  image.pipeline.yml  pipeline-version.gitlab-ci.yml  pipeline-version.job.yml  release.job.yml  terraform-create-teardown.pipeline.yml  terraform-environment.pipeline.yml  terraform.pipeline.yml  trigger-child-pipeline.job.yml  trigger-downstream-pipeline.job.yaml  trigger-downstream-pipeline.job.yml
test/: all-tests.gitlab-ci.yml  helm-tests.gitlab-ci.yml  image-tests.gitlab-ci.yml  image.test.sh  pipeline-version-tests.gitlab-ci.yml  pipeline-version.test.sh  utility.gitlab-ci.yml
tests/: ci-image-build-args.tests.sh  ci-image-build-secrets.tests.sh  ci-image-labels.tests.sh  ci-version.tests.sh  emoji.tests.sh  hello-world.gitlab-ci.yml  (+6 more)
(+109 files in other folders)
