[project]
name = "gitlabci"
version = "0.0.0+1-consolidate-projects-support-uv.42"
description = "Add your description here"
authors = [{ name = "Kerry Johnson", email = "kerry.t.johnson@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.69",
    "build>=1.3.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "gitpython>=3.1.45",
    "humanize>=4.14.0",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-extra-types>=2.10.6",
    "pytest-cov>=7.0.0",
    "python-gitlab>=7.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "rich-argparse>=1.7.2",
    "scikit-learn>=1.7.2",
    "semver>=3.0.4",
    "tomlkit>=0.13.3",
    "twine>=6.2.0",
]

[dependency-groups]
dev = [
    "pylint>=3.0.1,<4",
    "pre-commit>=3.5.0,<4",
]
test = [
    "pytest>=7.4.2,<8",
    "pytest-timeout>=2.1.0,<3",
    "pytest-asyncio>=0.21.1,<0.22",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.pytest.ini_options]
console_output_style    = "progress"
pythonpath              = "src"
testpaths               = "test/gitlabci_test"
log_file                = "./.build/test-results/pytest.log"
log_file_level          = "DEBUG"
log_file_format         = "%(asctime)s - %(levelname)-6s - %(name)20s - %(message)s"
log_file_date_format    = "%Y-%m-%d %H:%M:%S"
junit_family            = "xunit2"
junit_suite_name        = "GitLab CI"
junit_logging           = "all"
junit_log_passing_tests = true

addopts = [
    "--capture=no",
    "--no-header",
    "--quiet",
    '--asyncio-mode=auto',
    '--log-disable="testcontainers"',
    '--junitxml=./.build/test-results/unit-tests.xml',
    '--cov=gitlabci',
    '--cov-report=xml:./.build/test-results/coverage.xml',
]
filterwarnings = ["ignore::DeprecationWarning"]
